# FastAPI_proj

./: .example.env  .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml
docs/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 1e7dd7dcfb79_init.py  b759b87c5ba8_init.py  eca49d1404d6_init.py
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py
src/routes/: auth.py  contacts.py
src/services/: auth.py  email.py
tests/: test_route_contacts.py  test_unit_repository_contacts.py
